syntax = "proto3";

option go_package = "github.com/GP-Hacks/commons/api/proto";

package api;

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
  repeated Message messages = 1;
}

message Message {
  string role = 1;
  string content = 2;
}

message SendMessageResponse {
  string response = 1;
}

/*protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative api/proto/kdt.proto*/